# Tweedejaars-project

./: CoM.py  CoMrichard.py  PController.py  allKicks.py  balance.py  binarysearch.py  centerOfMassInge.py  forwardChain.py  ik_jacobian.py  ik_solver.py  initialPose.py  inverseKinematics.py  joint_eqs_left.pickle  joint_eqs_right.pickle  lookup_table.py  motions.py  p_controller.py  plot.py  plot_body.py  plot_points.m  presentation.tex  report.tex  retract_graph.py  retractionPoint.py
Cpp/: CMakeLists.txt  build.sh  qiproject.xml
Cpp/.qi/: worktree.xml
Cpp/CenterOfMass/: CMakeLists.txt  com.cpp  com.h  p_controller.cpp  p_controller.h  qiproject.xml
Cpp/ComController/: CMakeLists.txt  com.cpp  p_controller.cpp  p_controller.h  qiproject.xml
Cpp/Kinematics/: CMakeLists.txt  Doxyfile  kinematics.cpp  kinematics.h  qiproject.xml
Cpp/Kinematics_SWIG/: .kinematics_swig.cpp.swp  .kinematics_swig.h.swp  .kinematics_swig.i.swp  CMakeLists.txt  kinematics_swig.cpp  kinematics_swig.h  kinematics_swig.i  qiproject.xml
PController/PController/: PController.h
Presentation/: presentation.tex
Report/: Makefile  library.bib  report.tex
Resources/: LLeg_positions.txt  RLeg_positions.txt  joint_constraints.py
SDK/: CoM.py  inaoqi.py  license.rtf
SDK-64bit/: almath.py  naoqi.py  toolchain-pc.cmake  toolchain.xml
SDK-64bit/doc/: .buildinfo  contents.html  cpp-classindex.html  cpp-funcindex.html  genindex.html  glossary.html  index.html  naoqi-eventindex.html  naoqi-memoryindex.html  objects.inv  search.html  searchindex.js
final_presentation/: presentation.tex
(+2192 files in other folders)
